--- a/sass/_flash.scss
+++ b/sass/_flash.scss
@@ -1,37 +1,37 @@
 /************ ALERTS ************/
 
 .fixed {
-    position: absolute;
- }
- 
-  .alert {
-    padding: 15px;
-    border: 1px solid transparent;
-    margin-top: -100px;
-    width: 100vw;
-    position: fixed;
-    color: #fff;
-    text-align: center;
-    animation: moveInBottom 5s ease-out;
- }
+   position: absolute;
+}
+
+.alert {
+   padding: 16px;
+   border: 1px solid transparent;
+   top: 0px;
+   width: 100vw;
+   position: fixed;
+   color: #fff;
+   text-align: center;
+   animation: moveInBottom 5s ease-out;
+
+   &.alert-success {
+      background-color: #62C890;
+      border-color: #62C890;
+   }
+   
+   &.alert-info {
+      background-color: #1A697F;
+      border-color: #1A697F;
+   }
+   
+   &.alert-danger {
+      background-color: #C84040;
+      border-color: #C84040;
+   }
+}
  
  @keyframes moveInBottom {
-    0% { margin-top: 0px; }
-    80% { margin-top: 0px; }
-    100% { margin-top: -100px; }
+    0% { top: 0px; }
+    80% {top: 0px; }
+    100% { top: 0px; }
   }
-     
- .alert-success {
-    background-color: #62C890;
-    border-color: #62C890;
- }
- 
- .alert-info {
-    background-color: #1A697F;
-    border-color: #1A697F;
- }
- 
- .alert-danger {
-    background-color: #C84040;
-    border-color: #C84040;
- }
